tidos/tests/view_macro/panics/tag_name_ends_with_hyphen.rs
use tidos::view;

fn tag_name_ends_with_hyphen() {
	view! {
		<custom->text</custom->
	};
}

fn main() {}
